--- a/starter/02-HTML-Fundamentals/css/stylin.css
+++ b/starter/02-HTML-Fundamentals/css/stylin.css
@@ -1,24 +1,44 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: sans-serif;
-  border: 3px solid black;
   line-height: 1.6;
+}
+.container {
+  width: 1000px;
+  border: 3px solid black;
+  margin: 0 auto;
+  margin-top: 30px;
+  position: relative;
 }
 
 .header {
-  font-size: 22px;
+  font-size: 15px;
   text-align: center;
   text-transform: uppercase;
   background-color: #e7e7e7;
+  padding: 1.5em;
 }
 
 .price {
   font-size: 1.35rem;
+  float: left;
 }
 
 .shipping {
+  float: right;
   font-size: 0.9rem;
   color: #949494;
   font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.description {
+  clear: both;
 }
 
 .btn-cart {
@@ -27,6 +47,8 @@ body {
   text-transform: uppercase;
   font-size: 1.45rem;
   border: 0;
+  width: 100%;
+  padding: 18px 0;
 }
 .btn-cart:hover,
 .btn-cart:focus {
@@ -43,6 +65,69 @@ body {
   text-decoration: none;
 }
 
+.item-img {
+  width: 25%;
+  float: left;
+}
+
 ul {
   list-style: square;
+  margin: 20px;
+}
+
+li {
+  margin-bottom: 13px;
+}
+
+.sale {
+  background-color: #ec2f2f;
+  color: white;
+  font-weight: bold;
+  display: inline-block;
+  padding: 0.15em 1em;
+  position: absolute;
+  left: -40px;
+  top: -17px;
+  font-size: 1.125rem;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+}
+
+.color-picker {
+  list-style: none;
+  margin: 13px 0 0;
+}
+
+.box {
+  display: inline-block;
+  background-color: black;
+  height: 25px;
+  width: 25px;
+  margin-right: 20px;
+}
+
+.color2 {
+  background-color: royalblue;
+}
+
+.color3 {
+  background-color: red;
+}
+
+.color4 {
+  background-color: orange;
+}
+.color5 {
+  background-color: green;
+}
+
+.color6 {
+  background-color: plum;
+}
+
+section {
+  float: left;
+  width: 30%;
+  margin-left: 40px;
+  padding-top: 1em;
 }
