--- a/starter/02-HTML-Fundamentals/css/styles.css
+++ b/starter/02-HTML-Fundamentals/css/styles.css
@@ -86,6 +86,7 @@ footer {
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-top: 20px;
 }
 
 .main-header {
@@ -107,7 +108,7 @@ aside {
   border: 5px solid #1098ad;
   border-width: 5px 0;
   padding: 50px 40px;
-  max-width: 500px;
+  /* max-width: 500px; */
 }
 article {
   margin-bottom: 60px;
@@ -144,18 +145,6 @@ a:active {
 
 #copyright {
   color: red;
-}
-
-.copyright {
-  color: blue;
-}
-
-.text {
-  color: yellow;
-}
-
-footer p {
-  color: green;
 }
 
 .post-header {
@@ -207,6 +196,7 @@ ol {
   right: 0;
   top: 0;
 }
+
 .author-container {
   display: flex;
   margin-bottom: 20px;
@@ -215,14 +205,10 @@ ol {
 .profile-img {
   width: 50px;
   height: 50px;
-  /* float: left; */
   margin-right: 20px;
 }
 
 .author {
-  /* float: left; */
-  /* margin-top: 10px; */
-  /* margin-left: 20px; */
   align-self: flex-end;
   margin: 0;
 }
@@ -239,6 +225,17 @@ article {
 
 aside {
   flex-basis: 25%;
+}
+
+.posts-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.posts-container img {
+  margin-right: 1em;
+  width: 70px;
+  height: 70px;
 }
 
 /* h1 {
