--- a/starter/05-Design/style.css
+++ b/starter/05-Design/style.css
@@ -5,7 +5,18 @@ SPACING SYSTEM (px)
 FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
+/* 
+MAIN COLOR: #087F5B;
+HSL of main color: hsl(162, 88%, 26%);
+HSL of thegrey color: hsl(210, 10%, 23%);
+*/
 
+:root {
+  --mainColor: hsl(162, 88%, 26%);
+  --mainColor-light: hsl(162, 88%, 36%);
+  --greyColor: hsl(210, 10%, 19%);
+  --greyColor-light: hsl(212, 10%, 33%);
+}
 * {
   margin: 0;
   padding: 0;
@@ -19,6 +30,9 @@ body {
   font-family: sans-serif;
   font-family: "Inter", sans-serif;
   line-height: 1.6;
+  color: hsl(210, 9%, 31%);
+  color: var(--greyColor);
+  border-bottom: 8px solid var(--mainColor);
 }
 
 .container {
@@ -64,6 +78,7 @@ h3 {
 
 footer {
   font-size: 0.875rem;
+  color: var(--greyColor-light);
 }
 
 .header-text {
@@ -76,6 +91,33 @@ footer {
   font-size: 1.125rem;
 }
 
+/* Links => Buttons */
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  font-weight: 500;
+  background-color: var(--mainColor);
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: var(--mainColor-light);
+}
+
+.btn--big {
+  font-size: 1.125rem;
+  letter-spacing: 2px;
+  padding: 1rem 2rem;
+}
+
+.btn--small {
+  font-size: 0.875rem;
+  padding: 0.5rem 0.75rem;
+}
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
@@ -117,6 +159,9 @@ img {
 
 /* TESTIMONIAL */
 .testimonial-section {
+  background-color: var(--mainColor);
+  color: #fff;
+  padding: 1.5rem;
 }
 
 .testimonial-box {
