--- a/starter/05-Design/style.css
+++ b/starter/05-Design/style.css
@@ -16,6 +16,7 @@ HSL of thegrey color: hsl(210, 10%, 23%);
   --mainColor-light: hsl(162, 88%, 36%);
   --greyColor: hsl(210, 10%, 19%);
   --greyColor-light: hsl(212, 10%, 33%);
+  --shadow: hsla(0, 0%, 0%, 0.08);
 }
 * {
   margin: 0;
@@ -49,6 +50,9 @@ h2 {
   margin-bottom: 48px;
 }
 
+img {
+  border-radius: 12px;
+}
 .grid-3-cols {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -101,6 +105,7 @@ footer {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
+  border-radius: 110px;
 }
 
 .btn:hover,
@@ -148,6 +153,10 @@ img {
 
 /* FEATURES */
 .features-icon {
+  stroke: var(--mainColor);
+  width: 2rem;
+  height: 2rem;
+  margin-bottom: 1em;
 }
 
 .features-title {
@@ -162,6 +171,7 @@ img {
   background-color: var(--mainColor);
   color: #fff;
   padding: 1.5rem;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -179,6 +189,16 @@ img {
 }
 
 /* CHAIRS */
+.chair {
+  box-shadow: 0px 20px 20px 0px var(--shadow);
+  border-radius: 12px;
+}
+
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
 .chair-box {
   padding: 24px;
 }
